--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Café Orgánico Artesanal La Trinidad - Fusagasugá</title>
+    <title>Café Orgánico El Remanente - Fusagasugá</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- Para iconos -->
     <style>
         body {
@@ -204,8 +204,8 @@
 </head>
 <body>
     <header>
-        <h1><i class="fas fa-coffee"></i> Café Orgánico Artesanal La Trinidad</h1>
-        <p>El sabor puro de la naturaleza en cada grano, desde la vereda La Trinidad, Fusagasugá</p>
+        <h1><i class="fas fa-coffee"></i> Café Orgánico El Remanente</h1>
+        <p>El sabor puro de la naturaleza en cada grano, desde la finca El Remanente, Fusagasugá</p>
     </header>
     <nav>
         <a href="#about"><i class="fas fa-info-circle"></i> Sobre Nosotros</a>
@@ -218,8 +218,8 @@
     </div>
     <section id="about" class="about">
         <h2>Sobre Nosotros</h2>
-        <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Café orgánico en La Trinidad">
-        <p>En Café Orgánico Artesanal La Trinidad, ubicada en el corazón de la vereda La Trinidad en Fusagasugá, Cundinamarca, nos apasiona cultivar y procesar café de la más alta calidad. Nuestro compromiso con la agricultura orgánica significa que cada grano es cultivado sin pesticidas ni químicos sintéticos, respetando el equilibrio natural de la tierra y preservando el medio ambiente. Fundada por familias locales con décadas de experiencia, nuestra finca se encuentra en un entorno prístino, rodeado de montañas verdes y ríos cristalinos, lo que nos permite ofrecer un café que no solo es delicioso, sino también sostenible.</p>
+        <img src="caf4.jpg" alt="Café orgánico en El Remanente">
+        <p>En Café Orgánico El Remanente, ubicada en la finca El Remanente en Fusagasugá, Cundinamarca, nos apasiona cultivar y procesar café de la más alta calidad. Nuestro compromiso con la agricultura orgánica significa que cada grano es cultivado sin pesticidas ni químicos sintéticos, respetando el equilibrio natural de la tierra y preservando el medio ambiente. Fundada por familias locales con décadas de experiencia, nuestra finca se encuentra en un entorno prístino, rodeado de montañas verdes y ríos cristalinos, lo que nos permite ofrecer un café que no solo es delicioso, sino también sostenible.</p>
         <p>Creemos en la transparencia y la calidad. Nuestros granos rojos son cosechados a mano en su punto óptimo de madurez, asegurando un sabor rico, con notas de chocolate, nuez y un toque de acidez natural. Ven a visitarnos y siente la calidez de nuestra comunidad cafetera, donde cada taza cuenta una historia de dedicación y amor por la tierra. ¡Únete a nosotros en esta aventura orgánica y descubre por qué nuestro café es el favorito de los amantes del buen gusto!</p>
     </section>
     <section id="process" class="process">
@@ -227,11 +227,11 @@
         <p>Seguimos un método tradicional y meticuloso, desde la cosecha hasta el empaque, para garantizar que cada grano conserve su esencia orgánica y su sabor excepcional. Este proceso no solo resalta la pureza del café, sino que también apoya prácticas sostenibles que benefician a la comunidad y al planeta.</p>
         <ul>
             <li>
-                <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Cosecha de café rojo">
+                <img src="pepascafe.jpg" alt="Cosecha de café rojo">
                 <strong>Cosecha:</strong> Recogemos manualmente los granos de café rojo maduros, seleccionando solo los mejores para asegurar frescura y calidad orgánica.
             </li>
             <li>
-                <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Molienda de granos">
+                <img src="molienda.jpg" alt="Molienda de granos">
                 <strong>Molienda:</strong> Utilizamos molinos tradicionales para moler los granos frescos, liberando aromas naturales sin alterar su composición orgánica.
             </li>
             <li>
@@ -239,7 +239,7 @@
                 <strong>Deseresado:</strong> Eliminamos la pulpa y la cáscara con cuidado, obteniendo granos limpios listos para el siguiente paso, manteniendo su integridad orgánica.
             </li>
             <li>
-                <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Procesamiento y empaque">
+                <img src="caf4.jpg" alt="Procesamiento y empaque">
                 <strong>Procesamiento y Empaque:</strong> Secamos y tostamos a baja temperatura para realzar sabores, luego empacamos al vacío en presentaciones ecológicas, listas para llevar el café orgánico a tu hogar.
             </li>
         </ul>
@@ -247,47 +247,36 @@
     </section>
     <section id="products" class="products">
         <h2>Productos y Precios</h2>
-        <p>Ofrecemos una selección exclusiva de cafés orgánicos no instantáneos, empacados con amor para preservar su frescura y sabor. Cada producto es una invitación a experimentar la riqueza de La Trinidad. Precios en pesos colombianos (COP), con envíos gratuitos en Fusagasugá para compras superiores a $50,000.</p>
+        <p>Ofrecemos nuestro café orgánico empacado en presentaciones de 250g o 500g, o ambos juntos en un paquete especial. Cada producto es una invitación a experimentar la riqueza de El Remanente. Precios en pesos colombianos (COP), con envíos gratuitos en Fusagasugá para compras superiores a $50,000.</p>
         <ul>
             <li>
-                <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Café en grano 500g">
-                <strong>Café en Grano Orgánico 500g:</strong> $28,000<br>
-                <p>Granos enteros premium, ideales para moler en casa y disfrutar de un aroma fresco. Notas de chocolate oscuro y nuez, cultivado orgánicamente.</p>
+                <img src="caf1.jpg" alt="Café orgánico 250g">
+                <strong>Café Orgánico 250g:</strong> $15,000<br>
+                <p>Presentación compacta de café molido orgánico, ideal para probar o para uso diario. Notas de vainilla y caramelo, tostado lentamente para un sabor gourmet.</p>
             </li>
             <li>
-                <img src="https://images.unsplash.com/photo-1497935586351-b67a49e012bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Café molido 500g">
-                <strong>Café Molido Orgánico 500g:</strong> $32,000<br>
-                <p>Molido fino para cafeteras tradicionales, con un perfil de sabor equilibrado y un toque de acidez natural. Perfecto para el desayuno diario.</p>
+                <img src="caf2.jpg" alt="Café orgánico 500g">
+                <strong>Café Orgánico 500g:</strong> $25,000<br>
+                <p>Presentación más grande de café molido orgánico, perfecta para familias. Sabor equilibrado con toques de chocolate y nuez, cultivado y procesado orgánicamente.</p>
             </li>
             <li>
-                <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Café molido 1kg">
-                <strong>Café Molido Orgánico 1kg:</strong> $55,000<br>
-                <p>Presentación económica y versátil, ideal para familias o cafeterías. Sabor intenso con notas frutales, certificado 100% orgánico.</p>
+                <img src="caf3.jpg" alt="Paquete con ambos">
+                <strong>Paquete Orgánico (250g + 500g):</strong> $35,000<br>
+                <p>El paquete completo con ambas presentaciones: 250g y 500g de café molido orgánico. Ideal para regalar o para tener variedad en casa. ¡Ahorra y disfruta más!</p>
             </li>
-                        <!--
-<li>
-                <img src="https://images.unsplash.com/photo-1559056199-641a0ac8b55e?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Café tostado especial 250g">
-                <strong>Café Tostado Especial Orgánico 250g:</strong> $20,000<br>
-                <p>Mezcla exclusiva de granos selectos, tostados lentamente para resaltar sabores de vainilla y caramelo. Una experiencia gourmet en cada taza.</p>
-            </li>
-            <li>
-                <img src="https://images.unsplash.com/photo-1497935586351-b67a49e012bf?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Paquete de regalo">
-                <strong>Paquete de Regalo Orgánico (500g Grano + 250g Molido):</strong> $45,000<br>
-                <p>El regalo perfecto para amantes del café. Incluye empaque personalizado y una nota de agradecimiento. ¡Haz feliz a alguien especial!</p>
-            </li>    -->
         </ul>
         <p>Para pedidos personalizados o mayoristas, contáctanos para ofertas especiales. Todos nuestros productos son libres de gluten y aditivos, enfocados en la salud y el bienestar.</p>
     </section>
     <section id="contact" class="contact">
         <h2>Contacto</h2>
-        <p><i class="fas fa-map-marker-alt"></i><strong>Ubicación:</strong> Vereda La Trinidad, Fusagasugá, Cundinamarca, Colombia. ¡Ven a nuestra finca y conoce el proceso en vivo!</p>
-        <p><i class="fas fa-phone"></i><strong>Teléfono:</strong> +57 300 5540236</p>
-        <p><i class="fas fa-envelope"></i><strong>Email:</strong> omaric65@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt"></i><strong>Ubicación:</strong> Finca El Remanente, Fusagasugá, Cundinamarca, Colombia. ¡Ven a nuestra finca y conoce el proceso en vivo!</p>
+        <p><i class="fas fa-phone"></i><strong>Teléfono:</strong> +57 300 123 4567</p>
+        <p><i class="fas fa-envelope"></i><strong>Email:</strong> info@cafetrinidad.com</p>
         <p><i class="fas fa-clock"></i><strong>Horarios:</strong> Lunes a Sábado: 8:00 AM - 6:00 PM. Domingos: Citas previas para tours y degustaciones.</p>
         <p>Ofrecemos degustaciones gratuitas, tours guiados por la finca y asesoría personalizada. ¡Contáctanos hoy y comienza tu viaje hacia el mejor café orgánico!</p>
     </section>
     <footer>
-        <p>&copy; 2025 Café Orgánico Artesanal La Trinidad. Todos los derechos reservados. Hecho con pasión por el café colombiano y el medio ambiente. <i class="fas fa-leaf"></i></p>
+        <p>&copy; 2023 Café Orgánico El Remanente. Todos los derechos reservados. Hecho con pasión por el café colombiano y el medio ambiente. <i class="fas fa-leaf"></i></p>
     </footer>
 </body>
 </html>
